Overflow-x fix.

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body{
   color:var(--fg-color);
   background:var(--bg-color);
   transition:background var(--speed),color var(--speed);
+  overflow-x: hidden;
 }
 
 a{
